# language-study

./: README.md
fbnq-research/: FibonacciRecursive.java  fbnq.c  fbnq.cc  fbnq.go  fbnq.js  fbnq.py
fbnq-research/nodejs/: app.js  binding.gyp  fibonacci.cc
fbnq-research/rust/fbnq/: Cargo.toml
fbnq-research/rust/fbnq/src/: main.rs
ipc-research/grpc/go-grpc-client/: go.mod  go.sum  main.go  proto-build.sh  start.sh
ipc-research/grpc/go-grpc-client/sum/: sum.proto
ipc-research/grpc/nodejs-client/: client.js  package.json
ipc-research/grpc/rust-sum-server/: Cargo.toml  build.sh  buildlib.rs  start.sh
ipc-research/grpc/rust-sum-server/proto/: sum.proto
ipc-research/grpc/rust-sum-server/src/: main.rs  sum.rs
ipc-research/shm/: read.py  shmwrite.c
ipc-research/unix-socket/: client.js  server.rs
rust/: readme.md
rust/advance-grammer/: Cargo.toml  ab.txt
rust/advance-grammer/src/: concurrency.rs  main.rs  mmacro.rs  nestmod.rs  orm.rs  test.txt
rust/advance-grammer/src/son/: add.rs  file.rs  mod.rs
rust/base-grammar/: Cargo.toml
rust/base-grammar/src/: main.rs
rust/fib-lib/: Cargo.toml
rust/fib-lib/src/: lib.rs
rust/http-server/: Cargo.toml
rust/http-server/src/: main.rs
rust/lib-call/: Cargo.toml  fbnq-ffi.js
rust/lib-call/src/: fb.rs  main.rs
